--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-03-calculating-sum.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-03-calculating-sum.mdx
@@ -47,7 +47,7 @@ Have a go at coding this yourself.
 ```cpp {61-78,89,92-94}
 /* stats-calc.cpp - from the field guide. written by ... */
 
-#include <cstdio>
+#include "splashkit.h"
 #include "utilities.h"
 
 // The maximum number of values we can store
@@ -75,7 +75,7 @@ void populate_array(number_data &data)
   int size = read_integer("How many values do you want to enter? ");
   if (size > MAX_NUMBERS)
   {
-    printf("Sorry, you can only enter %d values.\n", MAX_NUMBERS);
+    write_line("Sorry, you can only enter " + to_string(MAX_NUMBERS) + " values.");
     size = MAX_NUMBERS;
   }
   else if (size < 0)
@@ -101,7 +101,7 @@ void print(const number_data &data)
 {
   for (int i = 0; i < data.size; i++)
   {
-    printf("%d: %lf\n", i, data.values[i]);
+    write_line(to_string(i) + ": " + to_string(data.values[i]));
   }
 }
 
@@ -133,12 +133,12 @@ int main()
 
   populate_array(data);
 
-  printf("\nYou entered...\n\n");
+  write_line("\nYou entered...\n");
   print(data);
 
-  printf("\nCalculating statistics...\n\n");
+  write_line("\nCalculating statistics...\n");
 
-  printf("Sum:        %4.2lf\n", sum(data));
+  write_line("Sum:        " + to_string(sum(data), 2));
 
   return 0;
 }
