--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-04-calculating-mean.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-04-calculating-mean.mdx
@@ -23,7 +23,7 @@ Think about any condition where there may be issues calculating the mean.
 ```cpp {80-92,108}
 /* stats-calc.cpp - from the field guide. written by ... */
 
-#include <cstdio>
+#include "splashkit.h"
 #include "utilities.h"
 
 // The maximum number of values we can store
@@ -51,7 +51,7 @@ void populate_array(number_data &data)
   int size = read_integer("How many values do you want to enter? ");
   if (size > MAX_NUMBERS)
   {
-    printf("Sorry, you can only enter %d values.\n", MAX_NUMBERS);
+    write_line("Sorry, you can only enter " + to_string(MAX_NUMBERS) + " values.");
     size = MAX_NUMBERS;
   }
   else if (size < 0)
@@ -77,7 +77,7 @@ void print(const number_data &data)
 {
   for (int i = 0; i < data.size; i++)
   {
-    printf("%d: %lf\n", i, data.values[i]);
+    write_line(to_string(i) + ": " + to_string(data.values[i]));
   }
 }
 
@@ -122,13 +122,13 @@ int main()
 
   populate_array(data);
 
-  printf("\nYou entered...\n\n");
+  write_line("\nYou entered...\n");
   print(data);
 
-  printf("\nCalculating statistics...\n\n");
+  write_line("\nCalculating statistics...\n");
 
-  printf("Sum:        %4.2lf\n", sum(data));
-  printf("Mean:       %4.2lf\n", mean(data));
+  write_line("Sum:        " + to_string(sum(data), 2));
+  write_line("Mean:       " + to_string(mean(data), 2));
 
   return 0;
 }
