--- a/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/0-compile.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/0-compile.mdx
@@ -1,6 +1,5 @@
 ---
 title: Compile & Run
-draft: true
 ---
 import { YouTube } from 'astro-embed';
 
@@ -15,3 +14,14 @@ Watch the video to see how to:
 - Use Visual Student Code (VS Code) to set up your project and write code.
 - Run the `clang++` compiler from the Terminal in VS Code.
 - Run the program that you created.
+
+Here is the code used in this video, so you can follow along:
+
+    ```cpp
+    #include "splashkit.h"
+
+    int main()
+    {
+        write_line("Hello World");
+    }
+    ```
