Move pages from deep dive memory to indirect access + minor restructure

--- a/src/content/docs/book/part-2-organised-code/6-indirect-access/3-guided-tour/00-01-using-new.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-indirect-access/3-guided-tour/00-01-using-new.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Using New and Delete"
+sidebar:
+    label: " - Using New and Delete"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
